Some spacing fixed for sidenav

--- a/src/app/commons/sideNav/styles.scss
+++ b/src/app/commons/sideNav/styles.scss
@@ -1,7 +1,6 @@
 .sidenav {
   %sidenav {
     position: fixed;
-    width: 300px;
     height: 100%;
     background-color: $white;
     z-index: 9;
@@ -33,6 +32,7 @@
 
   &-web {
     @extend %sidenav;
+    width: 340px;
     display: block;
 
     @include responsive-for(lg) {
@@ -42,6 +42,7 @@
 
   &-mobile {
     @extend %sidenav;
+    width: 340px;
     display: none;
 
     @include responsive-for(lg) {
